PROD-9515 - Fix album field spacing

--- a/src/bp-templates/bp-nouveau/readylaunch/css/main.css
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/main.css
@@ -17208,7 +17208,7 @@ body:not(.bb-is-mobile) .bb-rl-activity-list .acomment-display .ac-emotions_list
 }
 
 .bb-rl-modal-move-file .bb-rl-field-wrap {
-  padding: var(--bb-rl-space-200) var(--bb-rl-space-300) 0;
+  padding: var(--bb-rl-space-200) var(--bb-rl-space-300);
 }
 
 .bb-rl-modal-move-file .bb-rl-model-footer {
