--- a/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/activity/_media_modals.scss
+++ b/src/bp-templates/bp-nouveau/readylaunch/css/sass/components/activity/_media_modals.scss
@@ -21,7 +21,7 @@
 	}
 
 	.bb-rl-field-wrap {
-		padding: var(--bb-rl-space-200) var(--bb-rl-space-300) 0;
+		padding: var(--bb-rl-space-200) var(--bb-rl-space-300);
 	}
 
 	.bb-rl-model-footer {
